fix image alignment issues on mobile

--- a/public/assets/css/_scss/index.scss
+++ b/public/assets/css/_scss/index.scss
@@ -73,6 +73,14 @@ main > section:nth-child(odd) {
     padding-right: 5rem;
   }
 
+  .flex-img.flex-row-right {
+    text-align: right;
+  }
+
+  .flex-img.flex-row-right {
+    text-align: left;
+  }
+
   .uvp-col {
     text-align: left;
   }
