--- a/public/assets/css/_scss/screens.scss
+++ b/public/assets/css/_scss/screens.scss
@@ -9,7 +9,7 @@
   }
 
   .gif-img {
-    width: 95%;
+    // width: 95%;
     border: 10px solid color('grey', 'lighten-2');
   }
 
